--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "license": "AGPL3",
     "private": false,
     "dependencies": {
-        "@shanhuio/htmlgen": "file:../htmlgen/htmlgen.tgz",
-        "@shanhuio/lessbase": "file:../lessbase/lessbase.tgz",
-        "@shanhuio/misc": "file:../misc/misc.tgz",
+        "@shanhuio/htmlgen": "github:shanhuio/htmlgen-ts",
+        "@shanhuio/lessbase": "github:shanhuio/lessbase",
+        "@shanhuio/misc": "github:shanhuio/misc-ts",
         "@types/jquery": "^3.5.5",
         "@types/react": "^17.0.11",
         "@types/react-dom": "^17.0.7",
