using new dir structure

--- a/_/makefile
+++ b/_/makefile
@@ -3,6 +3,6 @@
 dist:
 	rm -rf dist
 	mkdir -p dist/
-	cp -RHL _ dist/
+	cp -RHL lib dist/
 	rm -f jarvis.zip
-	cd dist && zip -r ../jarvis.zip _ -x '*/.DS_Store'
+	cd dist && zip -r ../jarvis.zip lib -x '*/.DS_Store'
